# photo-indexer

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
scripts/: download_weights.sh  prepare_env.sh
src/photo_indexer/: __init__.py  cli.py  config.py  workers.py
src/photo_indexer/models/: __init__.py  captioner.py  people_detector.py  scene_classifier.py
src/photo_indexer/ui/: __init__.py  app.py  run_ui.py
src/photo_indexer/utils/: geo.py  logging.py  thumbnail.py
tests/: test_model.py  test_pipeline_end2end.py  test_preprocess.py
