```toml
[tool.poetry]
name        = "photo-indexer"
version     = "0.1.0"
description = "Offline DSLR photo-indexing pipeline: NEF → thumbnails → vision models → SQLite/ DuckDB."
authors     = ["Your Name <you@example.com>"]
license     = "MIT"
readme      = "README.md"
packages    = [{ include = "photo_indexer", from = "src" }]
keywords    = ["photography", "computer-vision", "indexing", "RAW", "NEF"]

[tool.poetry.dependencies]
python      = "^3.11"

# —–– Core stack —––
torch       = { version = ">=2.3,<2.4", extras = ["cpu"] }
torchvision = ">=0.18,<0.19"
torchaudio  = ">=2.3,<2.4"

rawpy       = "^0.18.1"
piexif      = "^1.1.3"
pillow      = ">=10,<12"
ultralytics = "^8.2.6"
requests    = "^2.32"
geopy       = "^2.4"
tqdm        = "^4.66"
pydantic    = "^2.7"
click       = "^8.1"

# —–– Optional columnar DB for analytics —––
duckdb      = { version = "^0.10", optional = true }

[tool.poetry.extras]
duckdb = ["duckdb"]

[tool.poetry.group.dev.dependencies]
pytest      = "^8.0"
black       = "^24.4"
isort       = "^5.13"
mypy        = "^1.10"
pre-commit  = "^3.7"

[tool.poetry.scripts]
pi = "photo_indexer.cli:main"

[build-system]
requires      = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
```
