# pyproject.toml – minimal, Poetry-free
# ---------------------------------------------------------------------------

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
[project]
name            = "photo-indexer"
version         = "0.1.0"
description     = "Offline DSLR photo-indexing pipeline: NEF → thumbnails → vision models → SQLite/DuckDB."
readme          = "README.md"
license         = { text = "MIT" }
authors         = [{ name = "Akshay Ranganath", email = "rakshay@gmail.com" }]
requires-python = ">=3.11"

# We’ll import the deps from requirements.txt (see [tool.setuptools.dynamic]).
# That means you still install them with:  pip install -r requirements.txt
# and the metadata that ends up inside a wheel / sdist stays in sync.

[project.optional-dependencies]
duckdb = ["duckdb>=0.10"]

[project.scripts]
pi = "photo_indexer.cli:main"

# ---------------------------------------------------------------------------
# Setuptools section
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# Dynamically read runtime deps from the same requirements file
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

# Ship the “py.typed” marker so type-checkers see the annotations
[tool.setuptools.package-data]
"photo_indexer" = ["py.typed"]
